<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/wallpaper_ohne4"
    android:orientation="vertical"
    android:visibility="visible" >

    <Button
        android:id="@+id/butm1"
        style="@style/main_menu"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="122dp"
        android:background="@drawable/blue_menu_btn"
        android:text="@string/begin" />
    
    <Button
        android:id="@+id/butm2"
        style="@style/main_menu"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_menu_btn"
        android:text="@string/arcades" />

    <Button
        android:id="@+id/butm3"
        android:layout_gravity="center"
        android:background="@drawable/blue_menu_btn"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="20dp"
        style="@style/main_menu"
        android:text="@string/option" />
    
    <Button
        android:id="@+id/butm4"
        android:layout_gravity="center"
        android:background="@drawable/blue_menu_btn"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="20dp"
        style="@style/main_menu"
        android:text="@string/help" />
    
   <Button
       android:id="@+id/butm5"
       style="@style/main_menu"
       android:layout_width="294dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="20dp"
       android:background="@drawable/red_menu_btn"
       android:text="@string/deco" />

</LinearLayout>

